ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 80

        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
